# wsindy-manifold

./: .editorconfig  .gitignore  .pre-commit-config.yaml  3_models_plots.py  Bibliography_Reference_Guide.md  CITATION.cff  CONFIG_SCHEMA_PATCHES.md  DOCUMENTATION_CLEANUP.md  ENSEMBLE_GUIDE.md  FILE_USAGE_ANALYSIS.md  GITHUB_OSCAR_SYNC.md  LICENSE  LSTM_INTEGRATION_COMPLETE.md  LSTM_INTEGRATION_GUIDE.md  MIGRATION_CHECKLIST.md  MVAR_GUIDE.md  MVAR_TRAINING_STRATEGY.md  OSCAR.md  OSCAR_ARRAYS_GUIDE.md  OSCAR_DEPLOYMENT.md  OSCAR_OPTIMAL_RUN.md  OSCAR_QUICKSTART.txt  OSCAR_RUN_INSTRUCTIONS.md  OSCAR_SETUP_GUIDE.md  OUTPUT_FORMAT_COMPLETION.md  PART6_INTEGRATION_SUMMARY.md  PATCH_STATUS.txt  PIPELINE_SPLIT_SUMMARY.md  README.md  README.rendered.md  ROM_MVAR_DEPENDENCY_MAP.md  ROM_QUICKREF.md  ROM_WSINDY_pipeline.py  ROM_pipeline.py  RUNTIME_ANALYSIS_SUMMARY.md  SYNTHESIS_V2_DIAGNOSIS.md  UNIFIED_OUTPUT_FORMAT_UPDATES.md  _inspect_lstm.py  analyze_r2_degradation.py  analyze_temporal_windows.py  (+82 more)
.archive/: COMMIT_MESSAGE.txt  run_unified_mvar_pipeline.py  stable_mvar_v2_14739495.out
.mpl-cache/: fontlist-v390.json
Defense/: gen_seal.py  main.nav  main.tex  make_new_figures.py  references.bib
Thesis/: Feedback.tex  Feedback_master.tex  config_audit.tex  main.tex  main_final.tex  references.bib
Thesis_Figures/: fig8_test_footprint_2d.py  fig9_4_bandwidth_limitation.py  results_table.csv  results_table.tex
configs/: ABL1_N200_raw_none_noAlign_H300.yaml  ABL4_N200_raw_simplex_align_H300.yaml  ABL5_N200_sqrt_none_noAlign_H300.yaml  ABL7_N200_sqrt_simplex_noAlign_H300.yaml  (+208 more)
(+1579 files in other folders)
