[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rectsim"
version = "0.1.0"
description = "Simulation of 2D collective motion with Morse interactions on a rectangular domain"
authors = [{name = "Collective Motion Lab"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "pyyaml",
    "imageio",
    "pandas",
    "numba",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
rectsim = "rectsim.cli:main"
